<?xml version="1.0"?>
<package format="3">
  <name>ros_monitoring_msgs</name>
  <version>1.0.0</version>
  <description>Messages for publishing monitoring data about ROS systems</description>
  <url>http://wiki.ros.org/ros_monitoring_msgs</url>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>builtin_interfaces</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
